--- a/p10.html
+++ b/p10.html
@@ -66,7 +66,7 @@
         <iframe
           width="1280px"
           height="720px"
-          src="https://editor.p5js.org/Mustard-Roy/embed/rV7UYB1B3"
+          src="p10_sketch.html"
         >
         </iframe>
         <p>
