Localization and Name Polishing

--- a/p6.html
+++ b/p6.html
@@ -20,16 +20,16 @@
         >&times;</a
       >
       <a href="index.html" style="font-size: 18pt;">Haoshu</a>
-      <a href="p1.html">Project&nbsp#1</a>
-      <a href="p2.html">Project&nbsp#2</a>
-      <a href="p3.html">Project&nbsp#3</a>
-      <a href="p4.html">Project&nbsp#4</a>
-      <a href="p5.html">Project&nbsp#5</a>
-      <a href="p6.html">Project&nbsp#6</a>
-      <a href="p7.html">Project&nbsp#7</a>
-      <a href="p8.html">Project&nbsp#8</a>
-      <a href="p9.html">Project&nbsp#9</a>
-      <a href="p10.html">Project&nbsp#10</a>
+	  <a href="p1.html">#1&nbsp;The&nbsp;Lost&nbsp;PenBox</a>
+      <a href="p2.html">#2&nbsp;STAR&nbsp;TREE&nbsp;Generator</a>
+      <a href="p3.html">#3&nbsp;Match&nbsp;Clock</a>
+      <a href="p4.html">#4&nbsp;Lonely&nbsp;Universe&nbsp;Monster</a>
+      <a href="p5.html">#5&nbsp;Chinese&nbsp;Name&nbsp;Mondrian&nbsp;Encoder</a>
+      <a href="p6.html">#6&nbsp;Put&nbsp;your&nbsp;mask&nbsp;on!</a>
+      <a href="p7.html">#7&nbsp;A&nbsp;Day&nbsp;with&nbsp;Tech</a>
+      <a href="p8.html">#8&nbsp;Put&nbsp;your&nbsp;mask&nbsp;on!&nbsp;v2.0</a>
+      <a href="p9.html">#9&nbsp;Daily&nbsp;Laughter</a>
+      <a href="p10.html">#10&nbsp;Apple&nbsp;Global&nbsp;Suppliers</a>
     </div>
     <span
       style="font-size:30px;cursor:pointer;color: #1B1F7D;position: fixed;top:0;"
@@ -38,7 +38,7 @@
     >
     <script>
       function openNav() {
-        document.getElementById("mySidenav").style.width = "250px";
+        document.getElementById("mySidenav").style.width = "300px";
       }
       function closeNav() {
         document.getElementById("mySidenav").style.width = "0";
@@ -62,7 +62,7 @@
         <iframe
           width="400px"
           height="300px"
-          src="https://cclab-portfolio-haoshu.glitch.me/p6_sketch.html"
+          src="p6_sketch.html"
         >
         </iframe>
 Please allow camera access if it's continuously loading.<br />
