--- a/p8_sketch.html
+++ b/p8_sketch.html
@@ -5,16 +5,16 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style2.css" />
     <!--     <script src="https://cdn.jsdelivr.net/npm/p5"></script> -->
-    <script src="/p5.js"></script>
-    <script src="/p5.sound.min.js"></script>
-    <script src="/clmtrackr.js"></script>
+    <script src="p5.js"></script>
+    <script src="p5.sound.min.js"></script>
+    <script src="clmtrackr.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
   </head>
   <body>
-    <script src="/sketch8.js"></script>
+    <script src="sketch8.js"></script>
     <script src="Sketch8_virus.js"></script>
     <script src="Sketch8_AgreePage.js"></script>
     <script src="Sketch8_LoadingPage.js"></script>
