Update Nested For Loop Visualization

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Haoshu | Critical Computation Portfolio</title>
+    <title>Haoshu | p5.js Critical Computation Portfolio</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -42,6 +42,7 @@
       <a href="p8.html">#8&nbsp;Put&nbsp;your&nbsp;mask&nbsp;on!&nbsp;v2.0</a>
       <a href="p9.html">#9&nbsp;Daily&nbsp;Laughter</a>
       <a href="p10.html">#10&nbsp;Apple&nbsp;Global&nbsp;Suppliers</a>
+      <a href="nestedforloop.html">#11&nbsp;Nested&nbsp;For&nbsp;Loop&nbsp;Visualizer</a>
     </div>
     <span
       style="font-size:30px;cursor:pointer;color: #1B1F7D;position: fixed;top:0;"
@@ -60,43 +61,47 @@
     <!-- main content -->
     <div class="content">
       <h1>
-        This is Haoshu's portfolio for Critical Computation class.
+        This is Haoshu's portfolio for p5.js creative works.
       </h1>
       <div class="row">
         <div class="column">
+            <a href="nestedforloop.html">
+              <img
+                src="vis4.gif"
+            /></a>
           <a href="p5.html">
             <img
-              src="https://cdn.glitch.com/fbc2a06c-a0ad-427a-ae11-00252e4e8f39%2FAnti-surv.gif?v=1605812748062"
+              src="mondrian.gif"
           /></a>
           <a href="p8.html">
             <img
-              src="https://cdn.glitch.com/fbc2a06c-a0ad-427a-ae11-00252e4e8f39%2FCamera.gif?v=1605813793865"
+              src="mask.gif"
           /></a>
           <a href="p9.html">
             <img
-              src="https://cdn.glitch.com/fbc2a06c-a0ad-427a-ae11-00252e4e8f39%2FData%20Portrait.gif?v=1606902161652"
+              src="daynight.gif"
           /></a>
           <a href="p3.html">
             <img
-              src="https://cdn.glitch.com/fbc2a06c-a0ad-427a-ae11-00252e4e8f39%2FClock.gif?v=1605812759182"
+              src="match.gif"
           /></a>
         </div>
         <div class="column">
           <a href="p7.html">
             <img
-              src="https://cdn.glitch.com/fbc2a06c-a0ad-427a-ae11-00252e4e8f39%2FGame.gif?v=1605812761484"
+              src="aday.gif"
           /></a>
           <a href="p10.html">
             <img
-              src="https://cdn.glitch.com/fbc2a06c-a0ad-427a-ae11-00252e4e8f39%2FAS2.gif?v=1608212151712"
+              src="suppliers.gif"
           /></a>
           <a href="p4.html">
             <img
-              src="https://cdn.glitch.com/fbc2a06c-a0ad-427a-ae11-00252e4e8f39%2FCorpse.gif?v=1605812751461"
+              src="monster.gif"
           /></a>
           <a href="p2.html">
             <img
-              src="https://cdn.glitch.com/fbc2a06c-a0ad-427a-ae11-00252e4e8f39%2FForm.gif?v=1605812761532"
+              src="star.gif"
           /></a>
         </div>
       </div>
