ccfest added and image fixed

--- a/nestedforloop.html
+++ b/nestedforloop.html
@@ -71,9 +71,11 @@
       </h1>
 
       <p>
-      This is the tool I created for code beginners learning nested For loop. I held a workshop “Nested For Loop and Permutation Design” with POWRPLNT using this tool in April, 2022. Here is the detailed <a href="https://royya.notion.site/Nested-For-Loop-and-Permutation-Design-Blog-dac8fdfe1ae243ca93bb54fe16542ba3">Blog</a> and the <a href="https://royya.notion.site/Nested-For-Loop-ff8c336b1f9041d8bfb10988c2e7d095">Resources</a> related to the workshop.
-      </p>
-
+          This is the tool I created for code beginners learning nested For loop.</br></br>
+          I held a workshop “Nested For Loop and Permutation Design” with POWRPLNT using this tool in April, 2022. Here is the detailed <a href="https://royya.notion.site/Nested-For-Loop-and-Permutation-Design-Blog-dac8fdfe1ae243ca93bb54fe16542ba3">Blog</a> and the <a href="https://royya.notion.site/Nested-For-Loop-ff8c336b1f9041d8bfb10988c2e7d095">Resources</a> related to the workshop.</br></br>
+          The tool was also shared in the <a href="https://ccfest.rocks/virtual-cc-fest-june-18">Creative Coding Fest 2022</a> on June 18, 2022 with <a href="https://processingfoundation.org">Processing Foundation</a>.
+       <img src="ccfest.gif"></img>
+</p>
 
     </div>
   </body>
