--- a/p3.html
+++ b/p3.html
@@ -101,13 +101,16 @@
         <image
           src="https://cdn.glitch.com/fbc2a06c-a0ad-427a-ae11-00252e4e8f39%2FDigital%20Sandglass.jpg?v=1600701942591"
         ></image>
-        The first one is to build 6 digital sandglasses to show the time. The
-        sands in the upper and the lower part of each sandglass represent both a
-        countdown and time, which is fascinating.<br /><br />
-
-        <image
-          src="https://cdn.glitch.com/fbc2a06c-a0ad-427a-ae11-00252e4e8f39%2FLife%20Countdown.jpg?v=1600701927554"
-        ></image>
+          </p>
+      <p>
+          The first one is to build 6 digital sandglasses to show the time. The
+          sands in the upper and the lower part of each sandglass represent both a
+          countdown and time, which is fascinating.<br /><br />
+      </p>
+<p>
+    <image src="https://cdn.glitch.com/fbc2a06c-a0ad-427a-ae11-00252e4e8f39%2FLife%20Countdown.jpg?v=1600701927554"></image>
+</p>
+        <p>
         The second one is simply using different bars to represent the seconds
         in a minute, minutes in an hour, hours in a day, days in a week, days in
         a month, months in a year, and years in the total 80 years of life.
@@ -115,10 +118,11 @@
         it is just an estimate for most people to let them better feel the time
         in their lives and the extra year of living could be considered a bonus.
         <br /><br />
-
-        <image
-          src="https://cdn.glitch.com/fbc2a06c-a0ad-427a-ae11-00252e4e8f39%2FMatch%20Clock.jpg?v=1600701919898"
-        ></image>
+</p>
+        <p>
+            <image src="https://cdn.glitch.com/fbc2a06c-a0ad-427a-ae11-00252e4e8f39%2FMatch%20Clock.jpg?v=1600701919898"></image>
+        </p>
+        <p>
         The third design is this Match Clock. I finally choose this one for 3
         reasons. First, unlike the sandglass that is purely a digitalization of
         a physical time-representing object, the matches are not used for a
