--- a/p9.html
+++ b/p9.html
@@ -627,15 +627,16 @@
         moment with the center or the orbit, while the online contents stay on
         the cloud and flow individually by the orbit. The draft of the canvas is
         shown below. <br />
-        <image
-          src="https://cdn.glitch.com/fbc2a06c-a0ad-427a-ae11-00252e4e8f39%2Fp9_1.png?v=1606901026543"
-        ></image>
+          </p><p>
+    <image src="https://cdn.glitch.com/fbc2a06c-a0ad-427a-ae11-00252e4e8f39%2Fp9_1.png?v=1606901026543"></image>
+</p><p>
         For the coding part, apart from deciding the parameter sizes of the
         orbit and the elements on the canvas, the biggest challenge is to
         determine the x, y coordinates of the illustration. Transformation of
         parameter equation on a circle is essential, which shows the
         relationship between rotating angles calculated from the time clockwise
         in different radius and the cartesian coordinates on the canvas.<br />
+        </p><p>
         <image
           src="https://cdn.glitch.com/fbc2a06c-a0ad-427a-ae11-00252e4e8f39%2Fp9_2.png?v=1606901028040"
         ></image>
